--- a/package.json
+++ b/package.json
@@ -1,32 +1,49 @@
 {
-	"name": "clip-share",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "pnpm biome check --write ."
-	},
-	"dependencies": {
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"lucide-react": "^0.453.0",
-		"next": "15.0.1",
-		"react": "19.0.0-rc-69d4b800-20241021",
-		"react-dom": "19.0.0-rc-69d4b800-20241021",
-		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "15.0.1",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	}
+  "name": "clip-share",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "pnpm biome check --write .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
+    "next": "15.0.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@chromatic-com/storybook": "1.9.0",
+    "@storybook/addon-essentials": "8.4.0-beta.0",
+    "@storybook/addon-interactions": "8.4.0-beta.0",
+    "@storybook/addon-onboarding": "8.4.0-beta.0",
+    "@storybook/blocks": "8.4.0-beta.0",
+    "@storybook/nextjs": "8.4.0-beta.0",
+    "@storybook/react": "8.4.0-beta.0",
+    "@storybook/test": "8.4.0-beta.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.1",
+    "eslint-plugin-storybook": "^0.10.1",
+    "postcss": "^8",
+    "storybook": "8.4.0-beta.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
