--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@headlessui/react": "^2.2.0",
 		"@heroicons/react": "^2.1.5",
 		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
