--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint-plugin-storybook": "^0.10.1",
 		"jsdom": "^25.0.1",
 		"postcss": "^8",
+		"prisma": "^5.21.1",
 		"storybook": "8.4.0-beta.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5",
